--- a/bicicletas.html
+++ b/bicicletas.html
@@ -19,7 +19,7 @@
 <body>
   <header class=" header c12-b">
     <div class="header-conteiner conteiner-base">
-      <a href="../index.html"><img src="../img/bikcraft.svg" alt="bicicleta nimbus"></a>
+      <a href="./index.html"><img src="./img/bikcraft.svg" alt="bicicleta nimbus"></a>
       <nav aria-label="primaria">
         <ul class="header-menu" id="header-menu">
           <li><a href="./bicicletas.html" class="header-links w">Bicicletas</a></li>
@@ -41,7 +41,7 @@
     <article class="nimbus-stark">
       <div class="conteiner-bikes conteiner-base fadeInLeft" data-anime="200">
         <div class="bike-foto">
-          <img src="../img/bicicletas/nimbus.jpg" alt="Nimbus Stark">
+          <img src="./img/bicicletas/nimbus.jpg" alt="Nimbus Stark">
           <span class="preco font-2-m">R$4999</span>
         </div>
         <div class="content-bikes">
@@ -51,13 +51,13 @@
           </div>
           <div class="vantagens">
             <ul class="lista-vatagens">
-              <li><img src="../img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-              <li><img src="../img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-              <li><img src="../img/icones/velocidade.svg" alt="">50 km/h</li>
-              <li><img src="../img/icones/rastreador.svg" alt="">Rastreador</li>
+              <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" alt="">50 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
             </ul>
             <div class="link-bike">
-              <a href="./bicicletas/nimbus.html" class="p5 font-1-m-b">MAIS SOBRE <img src="../img/icones/seta.svg" alt=""></a>
+              <a href="./bicicletas/nimbus.html" class="p5 font-1-m-b">MAIS SOBRE <img src="./img/icones/seta.svg" alt=""></a>
             </div>
           </div>
         </div>
@@ -67,7 +67,7 @@
     <article class="magic-might">
       <div class="conteiner-bikes conteiner-base fadeInRight" data-anime="200">
         <div class="bike-foto">
-          <img src="../img/bicicletas/magic.jpg" alt="Magic Might">
+          <img src="./img/bicicletas/magic.jpg" alt="Magic Might">
           <span class="preco font-2-m">R$2499</span>
         </div>
         <div class="content-bikes">
@@ -77,13 +77,13 @@
           </div>
           <div class="vantagens">
             <ul class="lista-vatagens c5">
-              <li><img src="../img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-              <li><img src="../img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-              <li><img src="../img/icones/velocidade.svg" alt="">40 km/h</li>
-              <li><img src="../img/icones/rastreador.svg" alt="">Rastreador</li>
+              <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" alt="">40 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
             </ul>
             <div class="link-bike">
-              <a href="./bicicletas/magic.html" class="p5 font-1-m-b">MAIS SOBRE <img src="../img/icones/seta.svg" alt=""></a>
+              <a href="./bicicletas/magic.html" class="p5 font-1-m-b">MAIS SOBRE <img src="./img/icones/seta.svg" alt=""></a>
             </div>
           </div>
         </div>
@@ -93,7 +93,7 @@
     <article class="nebular-cosmic">
       <div class="conteiner-bikes conteiner-base fadeInLeft" data-anime="200">
         <div class="bike-foto">
-          <img src="../img/bicicletas/nebula.jpg" alt="Nebula Cosmic">
+          <img src="./img/bicicletas/nebula.jpg" alt="Nebula Cosmic">
           <span class="preco font-2-m">R$3999</span>
         </div>
         <div class="content-bikes">
@@ -103,13 +103,13 @@
           </div>
           <div class="vantagens">
             <ul class="lista-vatagens">
-              <li><img src="../img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-              <li><img src="../img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-              <li><img src="../img/icones/velocidade.svg" alt="">45 km/h</li>
-              <li><img src="../img/icones/rastreador.svg" alt="">Rastreador</li>
+              <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" alt="">45 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
             </ul>
             <div class="link-bike">
-              <a href="./bicicletas/nebular.html" class="p5 font-1-m-b">MAIS SOBRE <img src="../img/icones/seta.svg" alt=""></a>
+              <a href="./bicicletas/nebular.html" class="p5 font-1-m-b">MAIS SOBRE <img src="./img/icones/seta.svg" alt=""></a>
             </div>
           </div>
         </div>
@@ -120,7 +120,7 @@
   <footer class="footer">
     <div class="conteiner-footer conteiner-base">
       <div class="titulo-footer">
-        <a href="../index.html"><img src="../img/bikcraft.svg" alt="bicicleta nimbus"></a>
+        <a href="./index.html"><img src="./img/bikcraft.svg" alt="bicicleta nimbus"></a>
       </div>
       <div class="contatos w">
         <h3 class="font-2-l-b">CONTATO</h3>
@@ -133,9 +133,9 @@
           <p>Rio de Janeiro - RJ</p>
         </div>
         <div class="social">
-          <a href="#" title="instagram"><img src="../img/redes/instagram.svg" alt=""></a>
-          <a href="#" title="facebook"><img src="../img/redes/facebook.svg" alt=""></a>
-          <a href="#" title="youtube"><img src="../img/redes/youtube.svg" alt=""></a>
+          <a href="#" title="instagram"><img src="./img/redes/instagram.svg" alt=""></a>
+          <a href="#" title="facebook"><img src="./img/redes/facebook.svg" alt=""></a>
+          <a href="#" title="youtube"><img src="./img/redes/youtube.svg" alt=""></a>
         </div>
       </div>
       <div class="informacoes">
