--- a/contato.html
+++ b/contato.html
@@ -19,7 +19,7 @@
 <body class="body">
   <header class="header c12-b">
     <div class="header-conteiner conteiner-base">
-      <a href="../index.html"><img src="../img/bikcraft.svg" alt="home"></a>
+      <a href="./index.html"><img src="./img/bikcraft.svg" alt="home"></a>
       <nav aria-label="primaria">
         <ul class="header-menu" id="header-menu">
           <li><a href="./bicicletas.html" class="header-links w">Bicicletas</a></li>
@@ -83,7 +83,7 @@
     <article class="lojas conteiner-base">
       <h2 class="font-1-xxl c12">lojas locais <span class="ponto p1">.</span></h2>
       <div class="loja-card">
-        <img src="../img/lojas/rj.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - RJ">
+        <img src="./img/lojas/rj.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - RJ">
         <div class="lojas-conteudos">
           <h3 class="font-1-xl">Rio De Janeiro</h3>
           <div class="lojas-dados">
@@ -94,11 +94,11 @@
             <a href="mailto:rj@bikcraft.com" class="c8">rj@bikcraft.com</a>
             <a href="tel:+55 21 9999-9999" class="c8">+55 21 9999-9999</a>
           </address>
-          <p class="atendimento font-2-s"><img src="../img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+          <p class="atendimento font-2-s"><img src="./img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
         </div>
       </div>
       <div class="loja-card">
-        <img src="../img/lojas/sp.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - SP">
+        <img src="./img/lojas/sp.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - SP">
         <div class="lojas-conteudos">
           <h3 class="font-1-xl">São Paulo</h3>
           <div class="lojas-dados">
@@ -117,7 +117,7 @@
   <footer class="footer">
     <div class="conteiner-footer conteiner-base">
       <div class="titulo-footer">
-        <a href="../index.html"><img src="../img/bikcraft.svg" alt="bicicleta nimbus"></a>
+        <a href="./index.html"><img src="./img/bikcraft.svg" alt="bicicleta nimbus"></a>
       </div>
       <div class="contatos w">
         <h3 class="font-2-l-b">CONTATO</h3>
@@ -130,9 +130,9 @@
           <p>Rio de Janeiro - RJ</p>
         </div>
         <div class="social">
-          <a href="#" title="instagram"><img src="../img/redes/instagram.svg" alt=""></a>
-          <a href="#" title="facebook"><img src="../img/redes/facebook.svg" alt=""></a>
-          <a href="#" title="youtube"><img src="../img/redes/youtube.svg" alt=""></a>
+          <a href="#" title="instagram"><img src="./img/redes/instagram.svg" alt=""></a>
+          <a href="#" title="facebook"><img src="./img/redes/facebook.svg" alt=""></a>
+          <a href="#" title="youtube"><img src="./img/redes/youtube.svg" alt=""></a>
         </div>
       </div>
       <div class="informacoes">
