--- a/orcamento.html
+++ b/orcamento.html
@@ -19,7 +19,7 @@
 <body id="orcamento">
   <header class="header c12-b">
     <div class="header-conteiner conteiner-base">
-      <a href="../index.html"><img src="../img/bikcraft.svg" alt="bicicleta nimbus"></a>
+      <a href="./index.html"><img src="./img/bikcraft.svg" alt="bicicleta nimbus"></a>
       <nav aria-label="primaria">
         <ul class="header-menu" id="header-menu">
           <li><a href="./bicicletas.html" class="header-links w">Bicicletas</a></li>
@@ -56,34 +56,34 @@
             <label for="nimbus">Numbus Stark <span>R$4999</span></label>
             <div class="orcamento-detalhes">
               <ul class="font-1-xs c8">
-                <li><img src="../img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-                <li><img src="../img/icones/velocidade.svg" alt="">50 km/h</li>
-                <li><img src="../img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-                <li><img src="../img/icones/rastreador.svg" alt="">Rastreador</li>
+                <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+                <li><img src="./img/icones/velocidade.svg" alt="">50 km/h</li>
+                <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+                <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
               </ul>
-              <img src="../img/bicicletas/nimbus.jpg" alt="Bicicleta Preta">
+              <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta Preta">
             </div>
             <input type="radio" name="produto" value="magic" id="magic">
             <label for="magic">Magic Migth <span>R$2499</span></label>
             <div class="orcamento-detalhes">
               <ul class="font-1-xs c8">
-                <li><img src="../img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-                <li><img src="../img/icones/velocidade.svg" alt="">40 km/h</li>
-                <li><img src="../img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-                <li><img src="../img/icones/rastreador.svg" alt="">Rastreador</li>
+                <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+                <li><img src="./img/icones/velocidade.svg" alt="">40 km/h</li>
+                <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+                <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
               </ul>
-              <img src="../img/bicicletas/magic.jpg" alt="Bicicleta Preta">
+              <img src="./img/bicicletas/magic.jpg" alt="Bicicleta Preta">
             </div>
             <input type="radio" name="produto" value="nebula" id="nebula">
             <label for="nebula">Nebula Cosmic <span>R$3999</span></label>
             <div class="orcamento-detalhes">
               <ul class="font-1-xs c8">
-                <li><img src="../img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-                <li><img src="../img/icones/velocidade.svg" alt="">45 km/h</li>
-                <li><img src="../img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-                <li><img src="../img/icones/rastreador.svg" alt="">Rastreador</li>
+                <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+                <li><img src="./img/icones/velocidade.svg" alt="">45 km/h</li>
+                <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+                <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
               </ul>
-              <img src="../img/bicicletas/nebula.jpg" alt="Bicicleta Branca">
+              <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta Branca">
             </div>
           </div>
 
@@ -150,7 +150,7 @@
   <footer class="footer">
     <div class="conteiner-footer conteiner-base">
       <div class="titulo-footer">
-        <a href="../index.html"><img src="../img/bikcraft.svg" alt="bicicleta nimbus"></a>
+        <a href="./index.html"><img src="./img/bikcraft.svg" alt="bicicleta nimbus"></a>
       </div>
       <div class="contatos w">
         <h3 class="font-2-l-b">CONTATO</h3>
@@ -163,9 +163,9 @@
           <p>Rio de Janeiro - RJ</p>
         </div>
         <div class="social">
-          <a href="#" title="instagram"><img src="../img/redes/instagram.svg" alt=""></a>
-          <a href="#" title="facebook"><img src="../img/redes/facebook.svg" alt=""></a>
-          <a href="#" title="youtube"><img src="../img/redes/youtube.svg" alt=""></a>
+          <a href="#" title="instagram"><img src="./img/redes/instagram.svg" alt=""></a>
+          <a href="#" title="facebook"><img src="./img/redes/facebook.svg" alt=""></a>
+          <a href="#" title="youtube"><img src="./img/redes/youtube.svg" alt=""></a>
         </div>
       </div>
       <div class="informacoes">
