--- a/seguros-page.html
+++ b/seguros-page.html
@@ -19,7 +19,7 @@
 <body>
   <header class="header c12-b">
     <div class="header-conteiner conteiner-base">
-      <a href="../index.html"><img src="../img/bikcraft.svg" alt="logo marca" width="136" height="32"></a>
+      <a href="./index.html"><img src="./img/bikcraft.svg" alt="logo marca" width="136" height="32"></a>
       <nav aria-label="primaria">
         <ul class="header-menu" id="header-menu">
           <li><a href="./bicicletas.html" class="header-links w">Bicicletas</a></li>
@@ -44,16 +44,16 @@
           <h3 class="font-1-p c6">PRATA</h3>
           <span class="font-1-xl w">R$ 199<span class="font-1-xs c6">mensal</span></span>
           <ul class="lista-vantagens">
-            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="./img/icones/lista.svg" alt="" width="13" height="9">
               <p>Duas trocas por ano</p>
             </li>
-            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="./img/icones/lista.svg" alt="" width="13" height="9">
               <p>Assistência técnica</p>
             </li>
-            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="./img/icones/lista.svg" alt="" width="13" height="9">
               <p>Suporte 08h às 18h</p>
             </li>
-            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="./img/icones/lista.svg" alt="" width="13" height="9">
               <p>Cobertura estadual</p>
             </li>
           </ul>
@@ -63,22 +63,22 @@
           <h3 class="font-1-p p1">OURO</h3>
           <span class="font-1-xl w">R$ 299<span class="font-1-xs c6">mensal</span></span>
           <ul class="lista-vantagens">
-            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="./img/icones/lista.svg" alt="" width="13" height="9">
               <p>Cinco trocas por ano</p>
             </li>
-            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="./img/icones/lista.svg" alt="" width="13" height="9">
               <p>Assistência especial</p>
             </li>
-            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="./img/icones/lista.svg" alt="" width="13" height="9">
               <p>Suporte 24h</p>
             </li>
-            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="./img/icones/lista.svg" alt="" width="13" height="9">
               <p>Cobertura nacional</p>
             </li>
-            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="./img/icones/lista.svg" alt="" width="13" height="9">
               <p>Desconto em parceiros</p>
             </li>
-            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="./img/icones/lista.svg" alt="" width="13" height="9">
               <p>Acesso ao Clube Bikcraft</p>
             </li>
           </ul>
@@ -93,42 +93,42 @@
           <ul class="lista-cards">
             <li>
               <div class="card-seguro-page">
-                <img src="../img/icones/eletrica.svg" alt="">
+                <img src="./img/icones/eletrica.svg" alt="">
                 <h3 class="w">Reparo Elétrico</h3>
                 <p class="c5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
               </div>
             </li>
             <li>
               <div class="card-seguro-page">
-                <img src="../img/icones/carbono.svg" alt="">
+                <img src="./img/icones/carbono.svg" alt="">
                 <h3 class="w">Reparo Elétrico</h3>
                 <p class="c5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
               </div>
             </li>
             <li>
               <div class="card-seguro-page">
-                <img src="../img/icones/sustentavel.svg" alt="">
+                <img src="./img/icones/sustentavel.svg" alt="">
                 <h3 class="w">Sustentável</h3>
                 <p class="c5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
               </div>
             </li>
             <li>
               <div class="card-seguro-page">
-                <img src="../img/icones/rastreador.svg" alt="">
+                <img src="./img/icones/rastreador.svg" alt="">
                 <h3 class="w">Recuperação</h3>
                 <p class="c5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
               </div>
             </li>
             <li>
               <div class="card-seguro-page">
-                <img src="../img/icones/seguro.svg" alt="">
+                <img src="./img/icones/seguro.svg" alt="">
                 <h3 class="w">Segurança</h3>
                 <p class="c5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
               </div>
             </li>
             <li>
               <div class="card-seguro-page">
-                <img src="../img/icones/velocidade.svg" alt="">
+                <img src="./img/icones/velocidade.svg" alt="">
                 <h3 class="w">Rapidez</h3>
                 <p class="c5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
               </div>
@@ -172,7 +172,7 @@
   <footer class="footer">
     <div class="conteiner-footer conteiner-base">
       <div class="titulo-footer">
-        <a href="../index.html"><img src="../img/bikcraft.svg" alt="bicicleta nimbus"></a>
+        <a href="./index.html"><img src="./img/bikcraft.svg" alt="bicicleta nimbus"></a>
       </div>
       <div class="contatos w">
         <h3 class="font-2-l-b">CONTATO</h3>
@@ -185,9 +185,9 @@
           <p>Rio de Janeiro - RJ</p>
         </div>
         <div class="social">
-          <a href="#" title="instagram"><img src="../img/redes/instagram.svg" alt=""></a>
-          <a href="#" title="facebook"><img src="../img/redes/facebook.svg" alt=""></a>
-          <a href="#" title="youtube"><img src="../img/redes/youtube.svg" alt=""></a>
+          <a href="#" title="instagram"><img src="./img/redes/instagram.svg" alt=""></a>
+          <a href="#" title="facebook"><img src="./img/redes/facebook.svg" alt=""></a>
+          <a href="#" title="youtube"><img src="./img/redes/youtube.svg" alt=""></a>
         </div>
       </div>
       <div class="informacoes">
