--- a/termos.html
+++ b/termos.html
@@ -19,7 +19,7 @@
 <body>
   <header class="header c12-b">
     <div class="header-conteiner conteiner-base">
-      <a href="../index.html"><img src="../img/bikcraft.svg" alt="logo marca" width="136" height="32"></a>
+      <a href="./index.html"><img src="./img/bikcraft.svg" alt="logo marca" width="136" height="32"></a>
       <nav aria-label="primaria">
         <ul class="header-menu" id="header-menu">
           <li><a href="./bicicletas.html" class="header-links w">Bicicletas</a></li>
@@ -93,7 +93,7 @@
   <footer class="footer">
     <div class="conteiner-footer conteiner-base">
       <div class="titulo-footer">
-        <a href="../index.html"><img src="../img/bikcraft.svg" alt="bicicleta nimbus" width="32" height="32"></a>
+        <a href="./index.html"><img src="./img/bikcraft.svg" alt="bicicleta nimbus" width="32" height="32"></a>
       </div>
       <div class="contatos w">
         <h3 class="font-2-l-b">CONTATO</h3>
@@ -106,9 +106,9 @@
           <p>Rio de Janeiro - RJ</p>
         </div>
         <div class="social">
-          <a href="#" title="instagram"><img src="../img/redes/instagram.svg" alt="" width="32" height="32"></a>
-          <a href="#" title="facebook"><img src="../img/redes/facebook.svg" alt="" width="32" height="32"></a>
-          <a href="#" title="youtube"><img src="../img/redes/youtube.svg" alt="" width="32" height="32"></a>
+          <a href="#" title="instagram"><img src="./img/redes/instagram.svg" alt="" width="32" height="32"></a>
+          <a href="#" title="facebook"><img src="./img/redes/facebook.svg" alt="" width="32" height="32"></a>
+          <a href="#" title="youtube"><img src="./img/redes/youtube.svg" alt="" width="32" height="32"></a>
         </div>
       </div>
       <div class="informacoes">
